--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,56 @@
-venv
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.env
+
+# Project specific
+logs/
+*.log
+.coverage
+htmlcov/
+.pytest_cache/
+
+# IDEs
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS specific
+.DS_Store
+Thumbs.db
+.directory
+
+# Local configs
+config.local.py
+settings.local.py
+*.local.yml
+
+# Data files
+*.csv
+!data/few_shot_examples.csv
+!data/sample_emails.csv
